resources/ej2-base/releasenotes/UWP/Release-Notes/v19.1.0.63/pdf.md
## PDF

### Bug Fixes
{:#PDF-bug-fixes}

* \#311180, \#317448 –PDF tags will be added properly with parent tags in a PDF document.
* \#314496 - Remainder text will be updated properly while layout the string with multiline. 
* \#312509 - `PdfLoadedFreeTextAnnotation` returns proper bounds from the particular PDF document. 
* \#317545 - Bookmarks will be displayed properly in Adobe document cloud web viewer.
* \#315262 - Ink annotation will be preserved properly while flatten with particular PDF document. 
* \#316316 - Exception will no longer occurs while loading large PDF documents. 
* \#318660 - Extra new line character will not be added in text box field. 
* \#318010 - Characters will be preserved properly while creating appearance for form fields.
* \#319553 - PDF compression will optimize the file size properly with particular document. 
* \#319401 - Document will be preserved properly while loading and saving the particular PDF document.
* \#319073 - Font preservation issue will no longer occurs with `PdfHtmlTextElement`. 
* \#321713 - Annotations will be preserved properly while import and flatten.
* \#321475 - Exception will no longer occurs while filling the form fields.
* \#322161 - `PdfGrid` will be paginated properly with `PdfTextElement`.  
* \#322536 - Bookmarks will be retrieved properly while getting from existing PDF document. 
* \#322533 - Content will be redacted properly with particular PDF document.
* \#322529 - Extra PDF pages will not be added with `EndPageLayout` event.
* \#322273 - Form field will be preserved properly while changing the forecolor.
* \#322933 - `PdfGrid` will be preserved properly with pagination bounds. 
* \#323087, \#323578 - Bounds will be return properly in `EndPageLayout` event. 
* \#323900 - Tags structure will be preserved properly with `PdfGrid`.
* \#320547 - Exception will no longer occurs while exporting `PdfGrid`. 
* \#323642 - Exception will no longer occurs while loading PDF document. 
* \#324594 - `Pdf417Barcode` will be rendered properly with float `XDimension` value. 
* \#324789 - `XPathException` will no longer occurs while loading XFA document.
* \#324973 - JavaScript actions will be removed properly from existing PDF document. 
* \#324966 - `PdfCode39ExtendedBarcode` will be preserved properly while drawing to PDF page multiple times.  
* \#F164131 - Euro characters will be preserved properly while filling form field. 
* \#F164353 - check box fields will be imported properly in a PDF document.